--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,17 @@
             android:name=".HomeActivity"
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name=".LoginActivity"
+            android:label=".LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity android:name=".RegisterActivity"
+            android:label=".RegisterActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
+
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
