--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,8 @@
             android:theme="@style/AppTheme.NoActionBar" />
 
         <activity
-            android:name=".LoginActivity"
-            android:label=".LoginActivity"
+            android:name=".SplashActivity"
+            android:label=".SplashActivity"
             android:theme="@style/AppTheme.NoActionBar" />
 
         <activity android:name=".RegisterActivity"
@@ -26,7 +26,7 @@
             android:theme="@style/AppTheme.NoActionBar"/>
 
 
-        <activity android:name=".SplashActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
